[package]
name = "cpa-card-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] } # 开启 trace

sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }